--- a/conectapro_pronto/vercel.json
+++ b/conectapro_pronto/vercel.json
@@ -1,6 +1,9 @@
 {
   "version": 2,
   "builds": [
-    { "src": "index.html", "use": "@vercel/static" }
+    { "src": "conectapro_pronto/index.html", "use": "@vercel/static" }
+  ],
+  "routes": [
+    { "src": "/(.*)", "dest": "conectapro_pronto/index.html" }
   ]
 }
